--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -13,5 +13,5 @@
 - name: 'Install package patterns-uyuni_server'
   zypper:
     name: "{{ uyuni_package }}"
-    state: 'latest'
+    state: 'present'
   when: 'ansible_distribution == "openSUSE Leap" and ansible_distribution_major_version|int == 15'
