--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 galaxy_info:
   role_name: 'uyuni_server_installation'
+  namespace: 'johanneskastl'
   author: 'Johannes Kastl'
   description: 'Install a uyuni server (on openSUSE Leap 15.1)'
   company: 'B1 Systems GmbH'
